<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/login"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:textColor="#000000"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="26dp"
        android:background="#11000000"
        android:ems="10"
        android:textColor="#000000"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_sign_in"
        android:layout_width="330dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="482dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:text="@string/sign_in_button" />

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="649dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:text="@string/register_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/login_restaurants_button"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="651dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:text="@string/restaurants_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</RelativeLayout>