<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.RestaurantActivity">

    <EditText
        android:id="@+id/restaurant_search"
        android:layout_width="358dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="238dp"
        android:autofillHints=""
        android:background="#11000000"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/restaurant_search"
        android:textSize="23sp"
        android:textColor="#000000" />

    <ListView
        android:id="@+id/restaurant_content"
        android:layout_width="match_parent"
        android:layout_height="379dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="334dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="0dp"
        android:text=""
        android:textColor="#000000"
        android:typeface="sans" />

    <Button
        android:id="@+id/main_sign_in"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:text="@string/sign_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/main_history_button"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="142dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:text="@string/main_history_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/main_register_button"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:text="@string/register_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/user_info_button"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:text="@string/user_info_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />
</RelativeLayout>
